--- a/bower.json
+++ b/bower.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "bootstrap": "~3.3.5",
     "lodash": "~3.10.1",
-    "moment": "~2.10.6",
+    "moment": "~2.13.0",
     "bootstrap-material-design": "~0.3.0",
     "paging": "~1.2.0",
-    "nprogress": "~0.2.0"
+    "nprogress": "~0.2.0",
+    "js-xlsx": "~0.8.0"
   }
 }
