--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "bootstrap-material-design": "~0.3.0",
     "paging": "~1.2.0",
     "nprogress": "~0.2.0",
-    "js-xlsx": "~0.8.0"
+    "js-xlsx": "~0.8.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.43"
   }
 }
