--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "paging": "~1.2.0",
     "nprogress": "~0.2.0",
     "js-xlsx": "~0.8.0",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.43"
+    "eonasdan-bootstrap-datetimepicker": "~4.17.43",
+    "font-awesome": "~4.6.3"
   }
 }
